k8s/apps/mucaron/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mucaron
  namespace: mucaron
spec:
  hostnames:
    - mucaron.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: mucaron-back
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api
    - backendRefs:
        - kind: Service
          name: mucaron-front
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
